app.css
/* Your styles should be mobile-first and responsive */

/** 
  * If you are unclear on how to utilize a mobile-first, responsive technique to write your CSS, here is an example: 
  *
  * https://github.com/andreacardybailey/responsive_example/blob/master/styles/responsive-base.css 
  *
*/


main{
  display: flex;
  justify-content: center;
  flex-direction: column;
  border-style: solid;
  margin: 0 15px 15px 15px;
  font-family: 'Lora', serif;
}


header{
  display: flex;
  justify-content: center;
  font-family: 'Lora', serif;
}

h1{
  display: flex;
  background-color: lightgray;
  justify-content: center;  
  padding: 30px;
  display: flex;
  flex-direction: column;
  text-align: center;
  border: solid;
  width: 100%;
  margin: 15px;
}

h2{
  text-align: center;
  margin-top: 0;
}

h3{
  padding: 10px;
  font-size: 90%;
}

p{
  text-align: center;
  font-size: 20px;
}

.scoreCurrent{
  display: flex;
  justify-content: space-evenly;
}

.picture{
  width: 30%;
  align-self: center;
  margin: auto;
}

.questionPicture{
  width: 20%;
}

button{
  width: 25%;
  align-self: center;
  border-radius: 10px;
  margin: 10px 0 10px 0;
  padding: 5px;
  background-color: lightgray;
}


#question{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
}

.radio-buttons{
  margin-bottom: 2px;
}


.wrongAnswer{
  display: flex;
  flex-direction: row;
  justify-content: center;
  background-color: lightgray;
  margin: 10px;
  padding-top: 15px;
}


.mainPage{
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.wrong{
  font-size:25px;
  margin-top: 14px;
}

.correct{
  font-size: 25px;
  margin-top: 13px;
}

